@@ -47,12 +47,15 @@
  * 17-Apr-2007 : Added null argument checks to constructor, new accessor 
  *               methods, added equals() override and used new URLUtilities
  *               class to encode series key and date (DG);
+ * 26-Jun-2007 : Removed URLUtilities dependency (DG);
  * 
  */
 
 package org.jfree.chart.urls;
 
 import java.io.Serializable;
+import java.io.UnsupportedEncodingException;
+import java.net.URLEncoder;
 import java.text.DateFormat;
 import java.util.Date;
 
@@ -180,17 +183,28 @@ public class TimeSeriesURLGenerator implements XYURLGenerator, Serializable {
         Comparable seriesKey = dataset.getSeriesKey(series);
         if (seriesKey != null) {
             result += firstParameter ? "?" : "&amp;";
-            result += this.seriesParameterName + "=" + URLUtilities.encode(
-                    seriesKey.toString(), "UTF-8");
+            String s = null;
+            try {
+                s = URLEncoder.encode(seriesKey.toString(), "UTF-8");
+            }
+            catch (UnsupportedEncodingException e) {
+                s = seriesKey.toString();
+            }
+            result += this.seriesParameterName + "=" + s;
             firstParameter = false;
         }
 
         long x = (long) dataset.getXValue(series, item);
         String xValue = this.dateFormat.format(new Date(x));
         result += firstParameter ? "?" : "&amp;";
-        result += this.itemParameterName + "=" + URLUtilities.encode(xValue, 
-                "UTF-8");
-
+        String s = null;
+        try {
+            s = URLEncoder.encode(xValue, "UTF-8");
+        }
+        catch (UnsupportedEncodingException e) {
+            s = xValue;
+        }
+        result += this.itemParameterName + "=" + s;
         return result;
     }
 
